--- a/hw-4/css/index.css
+++ b/hw-4/css/index.css
@@ -87,6 +87,12 @@ header{
     height: 30px;
     left: 1122px;
     top: 56px;
+
+}
+
+.vector,
+.language{
+    cursor: pointer;
 }
 
 .caret{
@@ -106,6 +112,7 @@ li, a{
     line-height: 17px;
     text-transform: uppercase;
     text-decoration: none;
+    cursor: pointer;
 }
 
 
@@ -117,7 +124,6 @@ li, a{
     left: 498px;
     top: 58px;
     font-style: normal;
-    font-weight: bold;
     font-size: 14px;
     line-height: 17px;
     display: flex;
@@ -135,7 +141,12 @@ li, a{
 }
 
 .navbar_links li:hover{
-    color: #800000;
+    font-weight: bold;
+}
+a button[class=sign_up]:hover{
+    background: none;
+    border: 1px solid #ffffff;
+    color: #ffffff;
 }
 
 button{
@@ -146,6 +157,7 @@ button{
     top: 50px;
 }
 .sign_up{
+    color: #ED4C5C;
     position: absolute;
     width: 160px;
     height: 50px;
@@ -156,10 +168,12 @@ button{
     outline: none;
     border: none;
     cursor: pointer;
+    transition: all 0.3s ease 0s;
 }
 
 .sign_button{
-    color: #ED4C5C;
+    /*color: #ED4C5C;*/
+    color: inherit;
     font-style: normal;
     font-weight: 600;
     font-size: 14px;
@@ -183,11 +197,16 @@ button{
     border: 1px solid #ffffff;
     border-radius: 6px;
     cursor: pointer;
+    outline: none;
     transition: all 0.3s ease 0s;
 }
 
-button:hover{
-    background: linear-gradient(#800000, #FF0000);
+/*button:hover{*/
+/*    background: linear-gradient(#800000, #FF0000);*/
+/*}*/
+a button[class=click]:hover{
+    background: #ffffff;
+    color: #ED4C5C;
 }
 
 .title{
